Cria pagina de cadastro de Campo com campo 'nome'

--- a/src/modulos/campo/campo.view.html
+++ b/src/modulos/campo/campo.view.html
@@ -22,4 +22,10 @@
     
   </div>
 
+  <div class="row">
+    <a ui-sref="campoCadastro">
+      <button class="btn btn-success pull-right">Novo Campo</button>
+    </a>
+  </div>
+  
 </div>
