Adiciona forma de listar campos sem linhas - Adiciona redirecionamento apos clicar em salvar ou cancelar

--- a/src/modulos/campo-cadastro/campo-cadastro.view.html
+++ b/src/modulos/campo-cadastro/campo-cadastro.view.html
@@ -9,7 +9,7 @@
       </label>
 
       <button type="submit" class="btn btn-primary">Salvar</button>
-      <button type="button" class="btn btn-danger" ng-click="$hide()">Cancelar</button>
+      <button type="button" class="btn btn-danger" ng-click="vm.redirecionar()">Cancelar</button>
     </div>
     </form>
   </div>
