Adiciona opçao para excluir um Campo

--- a/src/modulos/campo-edicao/campo-edicao.view.html
+++ b/src/modulos/campo-edicao/campo-edicao.view.html
@@ -17,6 +17,10 @@
         <br><button ng-click="vm.editar()" class="btn btn-primary">Salvar</button>
         <button type="button" class="btn btn btn-secondary" ng-click="vm.redirecionar()">Cancelar</button>
       </div>
+
+      <div>
+        <br><button type="button" class="btn btn-danger" ng-click="vm.excluir()">Excluir Campo</button>
+      </div>
     </form>
   </div>
   
