--- a/src/modulos/campo/campo.view.html
+++ b/src/modulos/campo/campo.view.html
@@ -3,6 +3,9 @@
 
   <div class="row">
     
+    <input type="text" ng-model="nomeCampo">
+    <button class="btn btn-info" ng-click="vm.pesquisar(nomeCampo)">Pesquisar</button>
+    <br>
     <table class="table table-hover table-dark">
       <thead>
         <tr>
