Altera aparencias das paginas home e cadastro de campo

--- a/src/modulos/home/home.view.html
+++ b/src/modulos/home/home.view.html
@@ -1,9 +1,13 @@
 <div class="jumbotron">
-  <h1>Hello, {{vm.name}}</h1>
-  
+  <h1>Olá, bem vindo ao Campos&Linhas</h1>
+  <h2>Aqui você pode gerenciar seus Campos e Linhas de forma fácil.</h2>
+
+  <p>O que deseja fazer?</p>
   <div class="row">
-    
-    
+    <button type="button" class="btn btn-info" ui-sref="campoCadastro">Cadastrar Campo</button>      
   </div>
+  <div class="row">
+      <button type="button" class="btn btn-info" ui-sref="campo">Consultar Campos</button>
+    </div>
 </div>
 
