--- a/src/modulos/campo-cadastro/campo-cadastro.view.html
+++ b/src/modulos/campo-cadastro/campo-cadastro.view.html
@@ -11,18 +11,21 @@
       <div>
         <label>Linhas: </label>
         <br><input type="text" ng-model="linha1.nome">
-        <button ng-click="vm.adicionaLinha(linha1)">Adicionar linha </button>
+        <button ng-click="vm.adicionaLinha(linha1)" class="btn btn-success">Adicionar linha </button>
         <br><input type="text" ng-model="linha2.nome">
-        <button ng-click="vm.adicionaLinha(linha2)">Adicionar linha </button>
+        <button ng-click="vm.adicionaLinha(linha2)" class="btn btn-success">Adicionar linha </button>
         <br><input type="text" ng-model="linha3.nome">
-        <button ng-click="vm.adicionaLinha(linha3)">Adicionar linha </button>
+        <button ng-click="vm.adicionaLinha(linha3)" class="btn btn-success">Adicionar linha </button>
         <br><input type="text" ng-model="linha4.nome">
-        <button ng-click="vm.adicionaLinha(linha4)">Adicionar linha </button>
+        <button ng-click="vm.adicionaLinha(linha4)" class="btn btn-success">Adicionar linha </button>
         <br><input type="text" ng-model="linha5.nome">
-        <button ng-click="vm.adicionaLinha(linha5)">Adicionar linha </button>
+        <button ng-click="vm.adicionaLinha(linha5)" class="btn btn-success">Adicionar linha </button>
       </div>
 
-      <!-- <tt>names = {{vm.listaLinhas}}</tt><br/> -->
+      <br><label>Linhas: </label>
+      <div ng-repeat='linha in vm.listaLinhas'>
+        <input type="text" ng-model="linha.nome" disabled>
+      </div>
 
       <div>
         <br><button ng-click="vm.cadastrar()" class="btn btn-primary">Salvar</button>
